--- a/web1.html
+++ b/web1.html
@@ -24,19 +24,42 @@
 
         <p>Jujujujujujujuju</p>
         -->
-        <!--lista não ordenada; UL-->
+        <!--lista não ordenada; UL
         <ul type="circle">
             <li>Item 1</li>
             <li>Item 2</li>
-        </ul>
-        <!--lista ordenada; OL: 1, A, a, I, i-->
+        </ul>-->
+        <!--lista ordenada; OL: 1, A, a, I, i
         <h2>Perguntas</h2>
         <ol type="I">
             <li>Comida?</li>
-        </ol>
-
+        </ol>-->
+        <h2>A empresa</h2>
+        <p>Lorem ipsum.........</p>
 
         <hr> <!--horizontal rule-->
+
+        <h2>Vantagens de ser cliente</h2>
+        <ol>
+            <li>Atendimento <strong>rápido</strong></li>
+            <li>Preços especiais</li>
+            <li>Muitas cidades</li>
+        </ol>
+
+        <hr> <!--horizontal rule-->
+
+        <h2>O que os clientes estão dizendo:</h2>
+        <em>"Que merda hein!"</em><br>
+        <strong>Juju</strong>
+
+        <hr>
+        
+        <h2>Mapa do site</h2>
+        <ul>
+            <li>Home</li>
+            <li>Quem somos</li>
+            <li>Contato</li>
+        </ul>
     </body>
 
 </html>
