--- a/web2.html
+++ b/web2.html
@@ -8,6 +8,49 @@
 
     <body>
         
+        <!--<img src="Imagens/ferrari.jpg" width="200"> 
+        
+        TABLES
+        <table border="2" width="100%">
+            <tr>
+                <th>Código</th>
+                <th>Produto</th>
+                <th>Preço</th>
+            </tr>
+
+            <tr>
+                <td>001</td>
+                <td>Notebook</td>
+                <td>R$2100</td>
+            </tr>
+
+            <tr>
+                <td>002</td>
+                <td>Tablet</td>
+                <td>R$900</td>
+            </tr>
+
+            <tr>
+                <td rowspan="2">Desconto</td>
+                <td colspan="2">cupom1 -R$10</td>
+            </tr>
+
+            <tr>
+                <td colspan="2">cupom2 -R$20</td>
+            </tr>
+        </table>
+        -->
+
+        <h2>Login</h2>
+        <form>
+            Login:<br>
+            <input type="text" name="login"><br>
+            Senha:<br>
+            <input type="password" name="senha"><br>
+            <input type="button" value="Logar"><br>
+
+        </form>
+
     </body>
 
 </html>
