--- a/web2.html
+++ b/web2.html
@@ -39,7 +39,7 @@
                 <td colspan="2">cupom2 -R$20</td>
             </tr>
         </table>
-        -->
+
 
         <h2>Login</h2>
         <form>
@@ -50,6 +50,35 @@
             <input type="button" value="Logar"><br>
 
         </form>
+
+        <h2>Cadastre-se</h2>
+        <form>
+            Login:<br>
+            <input type="text" name="login"><br>
+            Sexo:<br>
+            <input type="radio" name="sexo" value="M">Masculino<br>
+            <input type="radio" name="sexo" value="F">Feminino<br>
+            <input type="button" value="Logar"><br>
+
+            Interesses:<br>
+            <input type="checkbox" name="int">Futebol<br>
+            <input type="checkbox" name="int">Cursos<br>
+        
+            Estado<br>
+            <select name="estado">
+                <option value="sp">SP</option>
+                <option value="rj">RJ</option>
+            </select><br>
+
+            Observações<br>
+            <textarea></textarea><br>
+
+            <input type="submit" value="cadastrar">
+
+        </form>
+        -->
+
+        
 
     </body>
 
