--- a/web3.html
+++ b/web3.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Inline Style</title>
+        <title>Classes e IDs</title>
         <meta charset="utf-8">
 
         <style type="text/css">
@@ -13,6 +13,15 @@
             h1 {
                 color:blueviolet;
             }
+            /* o . define uma classe */
+            .azul {
+                color: blue;
+            }
+
+            /* ID 
+            #principal {
+                background: coral;
+            }*/
 
         </style>
     </head>
@@ -23,7 +32,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rhoncus tempus nisi at aliquet. Vestibulum hendrerit pretium tempor. Aenean consequat ut massa at iaculis. 
         </p>
 
-        <p style="color:brown;">
+        <p class="azul">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rhoncus tempus nisi at aliquet. Vestibulum hendrerit pretium tempor. Aenean consequat ut massa at iaculis.
         </p>
         
