--- a/web4.html
+++ b/web4.html
@@ -12,15 +12,10 @@
                 border-color: cadetblue;
                 border-width: 2px;
                 border-style: solid;
-            }*/
+            }
             .formatacao {
                 color: #0EB426;
                 font-size: 20px;
-            }
-            body {
-                font-size: 40px;
-                font-family: 'Times New Roman', Times, serif;
-
             }
 
             .negrito {
@@ -31,16 +26,40 @@
             }
             .form {
                 text-decoration: line-through;
+            }*/
+
+            /*.fundo {
+                background-color: #727272;
+                color: white;
+            }*/
+
+            /*body {
+                background-image: url('yoshi.png');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-position: center;
+
+            }*/
+
+            .fundo {
+                background: cadetblue url('yoshi.png') no-repeat fixed center;
             }
 
         </style>
     </head>
 
-    <body>
+    <body class="fundo">
 
-        <p class="negrito">Texto negrito</p>
-        <p class="italico">Texto negrito</p>
-        <p class="form">Texto negrito</p>
+        <h1>Conteudo de título 1</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam convallis consectetur dolor nec faucibus. Pellentesque rhoncus maximus neque eu condimentum. Sed congue turpis est, a ornare elit laoreet sit amet. Cras suscipit tempus dui sit amet ultrices. In ligula ipsum, aliquam nec viverra sit amet, faucibus at ante. Integer sit amet sem at sapien congue hendrerit. Duis vel sapien pulvinar odio tempus hendrerit. Curabitur sed dapibus augue. Morbi aliquet at elit et ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris eu ornare metus. Nullam laoreet nisl id tellus placerat, at viverra magna aliquet. Vivamus in diam nec neque hendrerit aliquet et sit amet nibh. Vivamus et mattis leo, eu semper arcu.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam convallis consectetur dolor nec faucibus. Pellentesque rhoncus maximus neque eu condimentum. Sed congue turpis est, a ornare elit laoreet sit amet. Cras suscipit tempus dui sit amet ultrices. In ligula ipsum, aliquam nec viverra sit amet, faucibus at ante. Integer sit amet sem at sapien congue hendrerit. Duis vel sapien pulvinar odio tempus hendrerit. Curabitur sed dapibus augue. Morbi aliquet at elit et ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris eu ornare metus. Nullam laoreet nisl id tellus placerat, at viverra magna aliquet. Vivamus in diam nec neque hendrerit aliquet et sit amet nibh. Vivamus et mattis leo, eu semper arcu.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam convallis consectetur dolor nec faucibus. Pellentesque rhoncus maximus neque eu condimentum. Sed congue turpis est, a ornare elit laoreet sit amet. Cras suscipit tempus dui sit amet ultrices. In ligula ipsum, aliquam nec viverra sit amet, faucibus at ante. Integer sit amet sem at sapien congue hendrerit. Duis vel sapien pulvinar odio tempus hendrerit. Curabitur sed dapibus augue. Morbi aliquet at elit et ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris eu ornare metus. Nullam laoreet nisl id tellus placerat, at viverra magna aliquet. Vivamus in diam nec neque hendrerit aliquet et sit amet nibh. Vivamus et mattis leo, eu semper arcu.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam convallis consectetur dolor nec faucibus. Pellentesque rhoncus maximus neque eu condimentum. Sed congue turpis est, a ornare elit laoreet sit amet. Cras suscipit tempus dui sit amet ultrices. In ligula ipsum, aliquam nec viverra sit amet, faucibus at ante. Integer sit amet sem at sapien congue hendrerit. Duis vel sapien pulvinar odio tempus hendrerit. Curabitur sed dapibus augue. Morbi aliquet at elit et ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris eu ornare metus. Nullam laoreet nisl id tellus placerat, at viverra magna aliquet. Vivamus in diam nec neque hendrerit aliquet et sit amet nibh. Vivamus et mattis leo, eu semper arcu.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam convallis consectetur dolor nec faucibus. Pellentesque rhoncus maximus neque eu condimentum. Sed congue turpis est, a ornare elit laoreet sit amet. Cras suscipit tempus dui sit amet ultrices. In ligula ipsum, aliquam nec viverra sit amet, faucibus at ante. Integer sit amet sem at sapien congue hendrerit. Duis vel sapien pulvinar odio tempus hendrerit. Curabitur sed dapibus augue. Morbi aliquet at elit et ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris eu ornare metus. Nullam laoreet nisl id tellus placerat, at viverra magna aliquet. Vivamus in diam nec neque hendrerit aliquet et sit amet nibh. Vivamus et mattis leo, eu semper arcu.</p>
 
     </body>
 
