--- a/HTML + CSS intermediario e avançado/sobre.html
+++ b/HTML + CSS intermediario e avançado/sobre.html
@@ -11,10 +11,10 @@
     
     <body id="home">
 
-        <h2>Home</h2>
+        <h2>Sobre</h2>
         <ul >
-            <li id="atual"><a href="">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="web8.html">Home</a></li>
+            <li id="atual"><a href="sobre.html">Sobre</a></li>
             <li><a href="">Serviços</a></li>
             <li><a href="">Contato</a></li>
         </ul>
