--- a/HTML + CSS intermediario e avançado/web8.html
+++ b/HTML + CSS intermediario e avançado/web8.html
@@ -2,22 +2,32 @@
 
 <html>
     <head>
-        <title>Navegação horizontal</title>
+        <title>Layout</title>
         <meta charset="utf-8">
 
         <link rel="stylesheet" type="text/css" href="Estilo2.css">
 
     </head>
     
-    <body id="home">
+    <body>
 
-        <h2>Home</h2>
-        <ul >
-            <li id="atual"><a href="">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Contato</a></li>
-        </ul>
+        <div id="container">
+            <div id="marca">Marca</div>
+            <div id="conteudo">
+                <h2>JUJU</h2>
+                <p>Juju é d+</p>
+            </div>
+            <div id="navegacao">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Serviços</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+
+            </div>
+            <div id="rodape">Rodapé</div>
+        </div>
 
     </body>
 </html>
