--- a/HTML + CSS intermediario e avançado/web8.html
+++ b/HTML + CSS intermediario e avançado/web8.html
@@ -14,8 +14,20 @@
         <div id="container">
             <div id="marca">Marca</div>
             <div id="conteudo">
-                <h2>JUJU</h2>
-                <p>Juju é d+</p>
+                <div id="conteudo-principal">
+                    <h2>JUJU</h2>
+
+                    <img src="Imagens/natureza.jpg" class="img-noticia">
+                    
+                    <p>Juju é d+</p>
+                    <h2>JUJU</h2>
+                    <p>Juju é d+</p>
+                </div>
+                <div id="conteudo-secundario">
+                    <h2>JUJU</h2>
+                    <p>Juju é d+</p>
+                </div>
+                
             </div>
             <div id="navegacao">
                 <ul>
