--- a/HTML + CSS Recursos especiais/web11.html
+++ b/HTML + CSS Recursos especiais/web11.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Border-radius</title>
+        <title>Novas tags HTML5</title>
         <meta charset="utf-8">
 
         <link rel="stylesheet" type="text/css" href="Estilo.css">
@@ -11,13 +11,43 @@
     
     <body>
 
-        <div id="caixa">
+        <!--cabeçalho-->
+        <header>
+            <h1>Logo</h1>
+            <span>meu site</span>
+        </header>
 
-            <h2>Cabeçalho</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra viverra leo a semper. Curabitur elementum urna vel tincidunt vehicula.
-            </p>
-        </div>
+        <!--navegação-->
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </nav>
+
+        <article>
+            <h3>Novos cursos</h3>
+
+            <section>
+                <h4>Curso de prog</h4>
+                <p>
+                    saushuahshaushauhsunxau. hsauhsuahushauhsuahs. ushauhsuhashua. hsuahsuahushau.
+                </p>
+
+                <time>20/10/2020</time>
+            </section>
+
+        </article>
+
+        <aside>
+            <h4>Curso de prog</h4>
+                <p>
+                    saushuahshaushauhsunxau. hsauhsuahushauhsuahs. ushauhsuhashua. hsuahsuahushau.
+                </p>
+        </aside>
+
+        <footer>Juju, todos os direitos reservados</footer>
 
     </body>
 </html>
