--- a/Bootstrap/Elementos flutuantes.html
+++ b/Bootstrap/Elementos flutuantes.html
@@ -13,57 +13,43 @@
 
     <body style="margin-bottom: 200px; padding: 16px;">
 
-        <!--Float Bootstrat 5-->
-        <div class="clearfix">
-            <div class="float-start">Float left</div>
-            <div class="float-end">Float right</div>
-        </div>
-
-        <!--Posicionamento fixo - top e bottom-->
-        <h1 class="fixed-top">Título do conteudo fixo</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
-
-        <!--Float responsivo-->
-        
-        <div class="float-sm-end">tela &gt; = 576px *</div>
-        <div class="float-md-end">tela &gt; = 768px *</div>
-        <div class="float-lg-end">tela &gt; = 992px *</div>
-        <div class="float-xl-end">tela &gt; = 1200px *</div>
-
-        <ul class="list-inline bg-warning sticky-top">
-            <li class="list-inline-item">Item1</li>
-            <li class="list-inline-item">Item2</li>
-            <li class="list-inline-item">Item3</li>
+        <h2>Navegação simples / abas</h2>
+        <ul class="nav nav-pills flex-column">
+            <li class="nav-item">
+                <a href="" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="" class="nav-link">Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a href="" class="nav-link disabled">Serviços </a>
+            </li>
         </ul>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus, odio et porta mollis, sapien arcu placerat lorem, quis tincidunt risus dui quis ipsum. Sed mattis convallis dolor ut iaculis.
-        </p>
+        <h2>Barra de navegação simples</h2>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <!--logo-->
+            <a href="" class="navbar-brand px-2">Juju linds</a>
 
+            <!--navegação-->
+            <ul class="navbar-nav ms-auto px-2">
+                <li class="nav-item">
+                    <a href="" class="nav-link active">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Sobre</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Serviços </a>
+                </li>
+            </ul>
 
+        </nav>
+
+        <h2>Barra de navegação com menu responsivo</h2>
         
-
+        <h2>Barra de navegação com formulário</h2>
 
 
         <!-- Optional JavaScript; choose one of the two! -->
