--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <title>JavaScript</title>
 
-        <script src="desafio.js">
+        <script src="codigo.js">
             //alert('Olá, seja bem vindo ao curso')
             //var nome = prompt('Digite seu nome');
 
