--- a/jQuery/eventos.html
+++ b/jQuery/eventos.html
@@ -38,6 +38,27 @@
 					$(e.target).css('background-color', 'blue');
 				})
 				*/
+
+				//Eventos - Mouse
+				//mousedown muda a cor quando o botão esquerdo do mouse é pressionado
+				$('#btn1').mousedown(() => {
+					$('#div2').css('background-color', 'green');
+				})
+
+				//mouseup muda a cor quando o botão esquerdo do mouse é solto
+				//também poderia utilizar o click()
+				$('#btn1').mouseup(() => {
+					$('#div2').css('background-color', 'purple');
+				})
+
+				$('#btn2').dblclick(() => {
+					$('#div2').css('background-color', 'yellow');
+				})
+
+				$('#div2').mousemove((e) => {
+					$('#resultadoDiv').html(': X: ' + e.offsetX + ' || Y: ' + e.offsetY);
+				})
+
 			})
 		</script>
 	</head>
@@ -62,10 +83,10 @@
 			<hr>
 
 			<h3>Mouse</h3>
-			<button type="button">Clique aqui</button>
-			<button type="button">Clique aqui 2x</button>
-			<div style="background-color: red; width: 80px; height: 50px; margin-top: 10px; margin-bottom: 10px"></div>
-			<span>Resultado do evento sobre a div</span>
+			<button id="btn1" type="button">Clique aqui</button>
+			<button id="btn2" type="button">Clique aqui 2x</button>
+			<div id="div2" style="background-color: red; width: 80px; height: 50px; margin-top: 10px; margin-bottom: 10px"></div>
+			<span>Resultado do evento sobre a div</span><span id="resultadoDiv"></span>
 			<hr>
 
 			<h3>Teclado</h3>
