--- a/Estudos/Frontend-mentor-sunnyside-agency/teste2.html
+++ b/Estudos/Frontend-mentor-sunnyside-agency/teste2.html
@@ -158,6 +158,24 @@
 
             </section>
 
+            <section class="section3">
+                <div class="img-container">
+                    <div>
+                        <img src="images/desktop/image-gallery-milkbottles.jpg">
+                    </div>
+                    <div>
+                        <img src="images/desktop/image-gallery-orange.jpg">
+                    </div>
+                    <div>
+                        <img src="images/desktop/image-gallery-cone.jpg">
+                    </div>
+                    
+                    <div>
+                        <img src="images/desktop/image-gallery-sugarcubes.jpg">
+                    </div>            
+                </div>
+            </section>
+
             <footer>
                 <div class="footer-container">
 
